# ccn-npi-xwalk

./: .gitignore  README.md  pyproject.toml
docs/: methodology.md
notebooks/: 01_ingest_cms_pos.py  02_ingest_nppes.py  03_match_ccn_to_npi.py
src/ccn_npi_xwalk/: __init__.py  cli.py  download.py
